# tabsdata-vm

./: .gitignore  README.MD  pull_function_code.py  pyproject.toml  reactive_test.py  terminal_tui_app.py  test.py  test_cli_autocomplete.py
ec2/: README.md  display_instances.sh  init.sh  init2.sh  profile.sh  yaml_getter_setter.py
src/tdconsole/: app_start.py
src/tdconsole/core/: construct_command_trie.py  construct_command_trie_v2.py  db.py  events.py  find_instances.py  input_validators.py  instance_tasks.py  models.py  system_environment.py  tabsdata_api.py
src/tdconsole/textual_assets/: align.py  api_processor.py  textual_screens.py
src/tdconsole/textual_assets/screens/: __init__.py
src/tdtui/: app.py  app_start.py
src/tdtui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tdtui/core/: db.py  find_instances.py  instance_tasks.py  models.py  td_dataclasses.py
src/tdtui/textual/: api_processor.py  task_screen.py  textual_instance_config.py  textual_screens.py  textual_simple.py
src/tdtui/textual_assets/: api_processor.py  sad.txt  test_node.py  textual_instance_config.py  textual_screens.py
tdtui/: README.MD  pyproject.toml
tdtui/src/tdtui/: cli.py
tdtui/src/tdtui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tdtui/src/tdtui/core/: find_instances.py  yaml_getter_setter.py
tdtui/src/tdtui/instance/: cli.py  display_instances.py  generate_instance_config.py  instance_setters.py  main.py  select_instance.py
tdtui/src/tdtui/textual/: api_processor.py  screen_template.py  spinners.py  task_screen.py  test_footer.py  textual_instance_config.py  textual_main.py  textual_screens.py  textual_simple.py
