[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdconsole"
version = "0.1.0.7"                # bump
description = "Interactive CLI for Tabsdata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tabsdata", "typer", "Rich", "Textual", "InquirerPy", "psutil"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tdconsole*"]

[project.scripts]
tdconsole = "tdconsole.app_start:run_app"
